--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                 <a href="contact.html">Contact us</a>
               </div>
             </div>
-          </div>
-d
+          </div
         </div>
       </nav>
     </div>
@@ -109,12 +108,12 @@ d
                 <h6>
                   Weddings
                 </h6>
-                <h6>
-                  Price
+                <!-- <h6>
+                   
                   <span>
-                    $200
+                     
                   </span>
-                </h6>
+                </h6> -->
               </div>
               <div class="new">
                 <span>
@@ -134,12 +133,12 @@ d
                 <h6>
                   Haldi
                 </h6>
-                <h6>
+               <!--  <h6>
                   Price
                   <span>
                     $300
                   </span>
-                </h6>
+                </h6> -->
               </div>
               <div class="new">
                 <span>
@@ -159,12 +158,12 @@ d
                 <h6>
                   Birthday Event
                 </h6>
-                <h6>
+                <!-- <h6>
                   Price
                   <span>
                     $110
                   </span>
-                </h6>
+                </h6> -->
               </div>
               <div class="new">
                 <span>
@@ -184,12 +183,12 @@ d
                 <h6>
                   Baby Shower
                 </h6>
-                <h6>
+                <!-- <h6>
                   Price
                   <span>
                     $45
                   </span>
-                </h6>
+                </h6> -->
               </div>
               <div class="new">
                 <span>
@@ -209,12 +208,12 @@ d
                 <h6>
                   Festivals
                 </h6>
-                <h6>
+                <!-- <h6>
                   Price
                   <span>
                     $95
                   </span>
-                </h6>
+                </h6> -->
               </div>
               <div class="new">
                 <span>
@@ -234,12 +233,12 @@ d
                 <h6>
                   House Warming
                 </h6>
-                <h6>
+               <!--  <h6>
                   Price
                   <span>
                     $70
                   </span>
-                </h6>
+                </h6> -->
               </div>
               <div class="new">
                 <span>
@@ -259,12 +258,12 @@ d
                 <h6>
                   Half Saree Function
                 </h6>
-                <h6>
+               <!--  <h6>
                   Price
                   <span>
                     $400
                   </span>
-                </h6>
+                </h6> -->
               </div>
               <div class="new">
                 <span>
@@ -284,12 +283,12 @@ d
                 <h6>
                   Mehindi
                 </h6>
-                <h6>
+                <!-- <h6>
                   Price
                   <span>
                     $450
                   </span>
-                </h6>
+                </h6> -->
               </div>
               <div class="new">
                 <span>
